# ppl-ros2-env

./: README.md
demo_ws/ur_demo/: setup.cfg
factory_simulation/: CMakeLists.txt  README.md  package.xml
factory_simulation/launch/: factory_patrol_launch.py  initialize_patrolbot_launch.py  initialize_turtlebots3_launch.py  navigation2.launch.py  simple_factory_launch.py  spawn_turtlebot3_launch.py  turtlebot3_ns_bringup.launch.py  turtlebot3_ns_state_publisher.launch.py
factory_simulation/map/: factory_patrol.env  factory_patrol.pgm  factory_patrol.yaml  map.yaml  patrol_map.yaml
factory_simulation/param/: old_waffle1.yaml  old_waffle2.yaml  waffle2.yaml
factory_simulation/ppl_files/: AllocatorExample.xml  KEC_BuildingCorrected.pgm  PatrolExample.xml  boxy.robot  factory.env  factory.yaml  factory_patrol_vizmo.env  patrol.query  ppl_env_to_map.py
factory_simulation/worlds/: .simple_factory.world.swp  factory_patrol.world  simple_factory.world
inlet/: CMakeLists.txt  package.xml
inlet/launch/: inlet_empty_launch.py  inlet_launch.py  inlet_small_launch.py  inlet_tiny_launch.py  robots_launch.py  robots_launch_small.py  robots_launch_tiny.py
inlet/map/: inlet.pgm  inlet_small.pgm  (+7 more)
perceptions/: package.xml  setup.py
turtlebot3_ws/: frames.gv
turtlebot_spawn/: CMakeLists.txt  package.xml
ur_demo/: package.xml  setup.py
ur_demo/launch/: handoff_demo.launch.py  pick_and_place.launch.py
ur_demo/ur_demo/: handoff_demo.py  ik_test.py  pick_and_place.py  publisher_gpg.py  publisher_ik.py  publisher_joint_trajectory_controller.py
yolov5_ros2/: setup.py
(+71 files in other folders)
